# pli

./: .gitignore  AGENTS.md  LICENSE  NOTICE.md  PLI.spec  PLI_仕様書_取扱説明書.docx  README.md  STATUS.md  create_manual_docx.py  create_manual_pdf.py  main.py  pyproject.toml  requirements-windows.txt  requirements.txt  run.sh
assets/: PLI.icns  macos-entitlements.plist
core/: hide_mode.py  homophones.py  interpreter.py  lang_utils.py  legal_dict.py  logging_setup.py  models.py  nllb_downloader.py  opus_downloader.py  recorder.py  session_controller.py  stt_listener.py  version.py  whisper_stt.py
core/engines/: __init__.py  hybrid.py  llm.py  mock.py  nllb.py
data/: glossary.json  legal_dict.json  phrases.json
docs/: BENCHMARK.md  DICTIONARY.md  MEMORY_OPTIMIZATION.md  PLI_定義書_v2.0.md  ROADMAP.md  macos_release.md  windows_setup.md
scripts/: benchmark_asr.py  benchmark_llm.py  build_macos_release.sh  pli-start.sh
tests/: test_attorney_window.py  test_hallucination_filter.py  test_homophones.py  test_interpreter_loading.py  test_interpreter_time_import.py  test_legal_dict.py  test_recorder.py  test_speaker_decision.py  test_stt_listener.py
ui/: attorney_window.py  conversation_bubble.py  conversation_log.py  defendant_window.py  dialogs.py  engine_menu.py  font_config.py  recording_bar.py  stt_control.py  translation_panel.py
